<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/randomFragment">

    <fragment
        android:id="@+id/randomFragment"
        android:name="com.anekdot.vtemu.ui.random.RandomFragment"
        android:label="@string/tab_random" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.anekdot.vtemu.ui.search.SearchFragment"
        android:label="@string/tab_search" />

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.anekdot.vtemu.ui.categories.CategoriesFragment"
        android:label="@string/tab_categories" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.anekdot.vtemu.ui.favorites.FavoritesFragment"
        android:label="@string/tab_favorites" />

    <fragment
        android:id="@+id/topFragment"
        android:name="com.anekdot.vtemu.ui.top.TopFragment"
        android:label="@string/tab_top" />

    <fragment
        android:id="@+id/voiceFragment"
        android:name="com.anekdot.vtemu.ui.voice.VoiceFragment"
        android:label="@string/tab_voice" />

</navigation>
